I changed the width of the body element to 100vw and pray if that fixes the layout problem of the projects page on mobile screens.

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,10 @@
     --logoSize: 145px;
 }
 
+body {
+    width: 100vw;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
